<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">VidClipClip</string>
    <string name="action_about">About</string>
    <string name="version_code">Version Code</string>
    <string name="version_name">Version Name</string>
    <string name="about_desc">Developed by creativeongreen.com\nReleased under the GPL v3 or later</string>
    <string name="vcc_start_recorder">Start</string>
    <string name="vcc_play">Play</string>
    <string name="vcc_text_timer">00:00:00</string>
    <string name="menu_settings">Settings</string>
    <string name="pref_settings">Settings</string>
    <string name="pref_title_fcr">Frame Capture Rate</string>
    <string name="pref_summary_fcr">set video clips interval</string>
    <string name="pref_title_mrd">Max. Record Duration</string>
    <string name="pref_summary_mrd">set max. recording time</string>
    <string name="msg_no_camera_support">This device does not support Camera</string>
    <string name="msg_no_media_file">NO media file</string>
    <string name="msg_on_recording">... On Recording, please stop recorder at first</string>
    <string name="msg_stop_recording">Stop Recording</string>
    <string name="msg_break">Action break</string>
    <string name="msg_dialog_title_settings">Settings Information</string>
    <string name="msg_dialog_title_stop_failed">Media Recorder</string>
    <string name="msg_fail_to_start_recorder">Fail to start media recorder</string>
    <string name="msg_fail_to_prepare_recorder">Fail to prepare media recorder</string>
    <string name="msg_stop_failed">Media recorder stop failed.</string>
    <string name="msg_stop_failed_suggestion">Please set your Max. Record Duration longer than Frame Capture Rate.</string>

</resources>