<!-- ?xml version="1.0" encoding="utf-8"? -->
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >

    <PreferenceCategory android:title="@string/pref_settings" >
        <ListPreference
            android:defaultValue="10"
            android:entries="@array/entriesFrameCaptureRate"
            android:entryValues="@array/entryValuesFrameCaptureRate"
            android:key="prefFrameCaptureRate"
            android:summary="@string/pref_summary_fcr"
            android:title="@string/pref_title_fcr" >
        </ListPreference>
        <ListPreference
            android:defaultValue="0"
            android:entries="@array/entriesMaxRecordDuration"
            android:entryValues="@array/entryValuesMaxRecordDuration"
            android:key="prefMaxRecordDuration"
            android:summary="@string/pref_summary_mrd"
            android:title="@string/pref_title_mrd" >
        </ListPreference>
    </PreferenceCategory>

</PreferenceScreen>