<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    tools:context=".MainActivity" >

    <FrameLayout
        android:id="@+id/camera_preview"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_centerInParent="true" />

    <ImageButton
        android:id="@+id/button_settings"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_alignTop="@+id/camera_preview"
        android:layout_alignParentRight="true"
        android:layout_centerVertical="true"
        android:background="@null"
        android:alpha="0.8"
        android:contentDescription="@string/menu_settings"
        android:onClick="onClickSettings"
        android:padding="10dp"
        android:scaleType="fitCenter"
        android:src="@drawable/ic_settings"
        android:text="@string/menu_settings" />

    <ImageButton
        android:id="@+id/button_play"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_alignBottom="@+id/camera_preview"
        android:layout_alignParentRight="true"
        android:layout_centerVertical="true"
        android:background="@null"
        android:alpha="0.6"
        android:contentDescription="@string/vcc_play"
        android:onClick="onClickVideoPlay"
        android:scaleType="fitCenter"
        android:src="@drawable/ic_play"
        android:text="@string/vcc_play" />

    <ToggleButton
        android:id="@+id/button_start_recorder"
        style="@style/buttonRecording"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_alignBottom="@+id/camera_preview"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="100dp"
        android:background="@drawable/ic_toggle_recording_bg"
        android:onClick="onClickRecorder"
        android:padding="10dp"
        android:scaleType="fitCenter"
        android:text="@string/vcc_start_recorder"
        android:textOff=""
        android:textOn="" />

    <TextView
        android:id="@+id/text_view_timer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:text="@string/vcc_text_timer"
        android:textColor="#ffffff"
        android:textSize="36sp" />

    <TextView
        android:id="@+id/text_view_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_centerHorizontal="false"
        android:padding="3dp"
        android:textColor="#ffffff"
        android:textSize="12sp" />

    <ListView
        android:id="@+id/list_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#ffffff"
        android:alpha="0.8"
        android:textColor="#000000"
        android:textSize="12sp"
        android:padding="15dp"
        android:divider="#242424"
        android:dividerHeight="1dp" />

</RelativeLayout>